--- a/BackgroundChanger/Pages/MainWindow.xaml
+++ b/BackgroundChanger/Pages/MainWindow.xaml
@@ -1,49 +1,67 @@
-﻿<mah:MetroWindow  x:Class="BackgroundChanger.Pages.MainWindow"
-                  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                  xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-                  xmlns:Dialog="clr-namespace:MahApps.Metro.Controls.Dialogs;assembly=MahApps.Metro"
-                  Dialog:DialogParticipation.Register="{Binding}"
-                  xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
-                  BorderThickness="0" 
-                  GlowBrush="Black"
-                  Title="CSGO - Background Changer" 
-                  Height="641" 
-                  Width="1200" 
-                  ResizeMode="NoResize" 
-                  WindowStartupLocation="CenterScreen"
-                  Icon="../Resources/csgo.png">
+﻿<mah:MetroWindow x:Class="BackgroundChanger.Pages.MainWindow"
+                 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                 xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+                 xmlns:Dialog="clr-namespace:MahApps.Metro.Controls.Dialogs;assembly=MahApps.Metro"
+                 Dialog:DialogParticipation.Register="{Binding}"
+                 xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
+                 BorderThickness="0"
+                 GlowBrush="Black"
+                 Title="CSGO - Background Changer"
+                 Height="641"
+                 Width="1200"
+                 ResizeMode="NoResize"
+                 WindowStartupLocation="CenterScreen"
+                 Icon="../Resources/csgo.png">
+    <Controls:MetroWindow.RightWindowCommands>
+        <Controls:WindowCommands>
+            <!-- TODO : Add settings page-->
+            <Button Content="Settings" />
+        </Controls:WindowCommands>
+    </Controls:MetroWindow.RightWindowCommands>
+
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="133*"/>
-            <ColumnDefinition Width="659*"/>
+            <ColumnDefinition Width="133*" />
+            <ColumnDefinition Width="659*" />
         </Grid.ColumnDefinitions>
         <Grid HorizontalAlignment="Left" VerticalAlignment="Top" Grid.ColumnSpan="2" Height="612" Width="1194">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="343*"/>
-                <ColumnDefinition Width="23*"/>
-                <ColumnDefinition Width="801*"/>
-                <ColumnDefinition Width="27*"/>
+                <ColumnDefinition Width="343*" />
+                <ColumnDefinition Width="23*" />
+                <ColumnDefinition Width="801*" />
+                <ColumnDefinition Width="27*" />
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
-                <RowDefinition Height="55*"/>
-                <RowDefinition Height="15*"/>
-                <RowDefinition Height="701*"/>
+                <RowDefinition Height="55*" />
+                <RowDefinition Height="15*" />
+                <RowDefinition Height="701*" />
             </Grid.RowDefinitions>
-            <ListView x:Name="WebmList" Height="617" VerticalAlignment="Top" SelectionChanged="ListView_SelectionChanged" IsSynchronizedWithCurrentItem="True" SnapsToDevicePixels="True" Grid.RowSpan="3" Margin="0,-5,0,0">
+            <ListView x:Name="WebmList" Height="617" VerticalAlignment="Top"
+                      SelectionChanged="ListView_SelectionChanged" IsSynchronizedWithCurrentItem="True"
+                      SnapsToDevicePixels="True" Grid.RowSpan="3" Margin="0,-5,0,0">
                 <ListView.View>
                     <GridView AllowsColumnReorder="False">
-                        <GridViewColumn/>
+                        <GridViewColumn />
                     </GridView>
                 </ListView.View>
             </ListView>
-            <MediaElement x:Name="WebmPlayer" Grid.Column="2" HorizontalAlignment="Left" Height="450" Grid.Row="2" VerticalAlignment="Top" Width="800" IsMuted="True"/>
-            <Label x:Name="LbTitle" Content="" Grid.Row="0" Grid.Column="2" HorizontalAlignment="Right" VerticalAlignment="Bottom" Height="38" Width="399" FontWeight="Bold" FontStyle="Italic" FontSize="24" Margin="0,0,402,0"/>
-            <Button x:Name="SelectBtn" Content="Accept" Grid.Column="2" Margin="670,476,0,45" Grid.Row="2" Background="#FF81C784" BorderThickness="1" TabIndex="-7" Focusable="False" RenderTransformOrigin="0.5,0.5" Click="SelectBtn_Click" HorizontalAlignment="Left" Width="130" FontSize="16" Visibility="Hidden"/>
-            <Button x:Name="BtnRefresh" Content="Refresh" Grid.Column="2" HorizontalAlignment="Left" Margin="0,476,0,0" Grid.Row="2" BorderThickness="1" VerticalAlignment="Top" Width="130" Click="BtnRefresh_Click" FontSize="16" FontWeight="Bold" Height="35"/>
-            <Label x:Name="LbInfos" Content="" Grid.Row="0" Grid.Column="2" HorizontalAlignment="Right" VerticalAlignment="Bottom" Height="38" Width="399" FontWeight="Bold" FontStyle="Italic" FontSize="24"/>
+            <MediaElement x:Name="WebmPlayer" Grid.Column="2" HorizontalAlignment="Left" Height="450" Grid.Row="2"
+                          VerticalAlignment="Top" Width="800" IsMuted="True" />
+            <Label x:Name="LbTitle" Content="" Grid.Row="0" Grid.Column="2" HorizontalAlignment="Right"
+                   VerticalAlignment="Bottom" Height="38" Width="399" FontWeight="Bold" FontStyle="Italic"
+                   FontSize="24" Margin="0,0,402,0" />
+            <Button x:Name="SelectBtn" Content="Accept" Grid.Column="2" Margin="670,476,0,45" Grid.Row="2"
+                    Background="#FF81C784" BorderThickness="1" TabIndex="-7" Focusable="False"
+                    RenderTransformOrigin="0.5,0.5" Click="SelectBtn_Click" HorizontalAlignment="Left" Width="130"
+                    FontSize="16" Visibility="Hidden" />
+            <Button x:Name="BtnRefresh" Content="Refresh" Grid.Column="2" HorizontalAlignment="Left" Margin="0,476,0,0"
+                    Grid.Row="2" BorderThickness="1" VerticalAlignment="Top" Width="130" Click="BtnRefresh_Click"
+                    FontSize="16" FontWeight="Bold" Height="35" />
+            <Label x:Name="LbInfos" Content="" Grid.Row="0" Grid.Column="2" HorizontalAlignment="Right"
+                   VerticalAlignment="Bottom" Height="38" Width="399" FontWeight="Bold" FontStyle="Italic"
+                   FontSize="24" />
         </Grid>
 
     </Grid>
 </mah:MetroWindow>
-
