--- a/BackgroundChanger/Pages/MainWindow.xaml
+++ b/BackgroundChanger/Pages/MainWindow.xaml
@@ -1,25 +1,35 @@
 ﻿<mah:MetroWindow x:Class="BackgroundChanger.Pages.MainWindow"
                  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                 xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-                 xmlns:Dialog="clr-namespace:MahApps.Metro.Controls.Dialogs;assembly=MahApps.Metro"
-                 Dialog:DialogParticipation.Register="{Binding}"
+                 xmlns:controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+                 xmlns:dialog="clr-namespace:MahApps.Metro.Controls.Dialogs;assembly=MahApps.Metro"
+                 dialog:DialogParticipation.Register="{Binding}"
                  xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
                  BorderThickness="0"
-                 GlowBrush="Black"
                  Title="CSGO - Background Changer"
                  Height="641"
                  Width="1200"
                  ResizeMode="NoResize"
                  WindowStartupLocation="CenterScreen"
-                 Icon="../Resources/csgo.png">
-    <Controls:MetroWindow.RightWindowCommands>
-        <Controls:WindowCommands>
+                 Icon="../Resources/csgo.ico">
+    <controls:MetroWindow.RightWindowCommands>
+        <controls:WindowCommands>
             <!-- TODO : Add settings page-->
-            <Button Content="Settings" />
-        </Controls:WindowCommands>
-    </Controls:MetroWindow.RightWindowCommands>
-
+            <Button x:Name="BtnSettings"  Content="Settings" Click="BtnSettings_Click"/>
+        </controls:WindowCommands>
+    </controls:MetroWindow.RightWindowCommands>
+    <controls:MetroWindow.Flyouts>
+        <controls:FlyoutsControl>
+            <controls:Flyout x:Name="UpdateFlyOut" Header="Update" Position="Right" Width="400">
+                <Grid>
+                    <Label x:Name="LbTitleUpdate" FontSize="14" FontWeight="Bold" VerticalAlignment="Top" />
+                    <Label x:Name="LbDescUpdate" FontSize="14" FontWeight="Bold" Margin="0,30,0,0" />
+                    <Button Width="130" FontSize="16" FontWeight="Bold" Height="35" HorizontalAlignment="Right"
+                            VerticalAlignment="Bottom" Margin="0,0,40,40" Content="Download" Background="#FF1976D2" />
+                </Grid>
+            </controls:Flyout>
+        </controls:FlyoutsControl>
+    </controls:MetroWindow.Flyouts>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="133*" />
@@ -47,16 +57,16 @@
                 </ListView.View>
             </ListView>
             <MediaElement x:Name="WebmPlayer" Grid.Column="2" HorizontalAlignment="Left" Height="450" Grid.Row="2"
-                          VerticalAlignment="Top" Width="800" IsMuted="True" />
+                          VerticalAlignment="Top" Width="800" IsMuted="True" MediaOpened="WebmPlayer_MediaOpened" />
             <Label x:Name="LbTitle" Content="" Grid.Row="0" Grid.Column="2" HorizontalAlignment="Right"
                    VerticalAlignment="Bottom" Height="38" Width="399" FontWeight="Bold" FontStyle="Italic"
                    FontSize="24" Margin="0,0,402,0" />
-            <Button x:Name="SelectBtn" Content="Accept" Grid.Column="2" Margin="670,476,0,45" Grid.Row="2"
+            <Button x:Name="SelectBtn" Content="Update" Grid.Column="2" Margin="670,476,0,45" Grid.Row="2"
                     Background="#FF81C784" BorderThickness="1" TabIndex="-7" Focusable="False"
                     RenderTransformOrigin="0.5,0.5" Click="SelectBtn_Click" HorizontalAlignment="Left" Width="130"
                     FontSize="16" Visibility="Hidden" />
             <Button x:Name="BtnRefresh" Content="Refresh" Grid.Column="2" HorizontalAlignment="Left" Margin="0,476,0,0"
-                    Grid.Row="2" BorderThickness="1" VerticalAlignment="Top" Width="130" Click="BtnRefresh_Click"
+                    Grid.Row="2" BorderThickness="1" VerticalAlignment="Top" Click="BtnRefresh_Click" Width="130"
                     FontSize="16" FontWeight="Bold" Height="35" />
             <Label x:Name="LbInfos" Content="" Grid.Row="0" Grid.Column="2" HorizontalAlignment="Right"
                    VerticalAlignment="Bottom" Height="38" Width="399" FontWeight="Bold" FontStyle="Italic"
