--- a/BackgroundChanger/Pages/MainWindow.xaml
+++ b/BackgroundChanger/Pages/MainWindow.xaml
@@ -14,8 +14,8 @@
                  Icon="../Resources/csgo.ico">
     <controls:MetroWindow.RightWindowCommands>
         <controls:WindowCommands>
-            <!-- TODO : Add settings page-->
-            <Button x:Name="BtnSettings"  Content="Settings" Click="BtnSettings_Click"/>
+            <Button x:Name="BtnRefresh" Content="Refresh webm"  Click="BtnRefresh_Click"/>
+            <Button x:Name="BtnChangeWebmFolder" Content="Change webm folder" Click="BtnChangeWebmFolder_Click"/>
         </controls:WindowCommands>
     </controls:MetroWindow.RightWindowCommands>
     <controls:MetroWindow.Flyouts>
@@ -57,7 +57,7 @@
                 </ListView.View>
             </ListView>
             <MediaElement x:Name="WebmPlayer" Grid.Column="2" HorizontalAlignment="Left" Height="450" Grid.Row="2"
-                          VerticalAlignment="Top" Width="800" IsMuted="True" MediaOpened="WebmPlayer_MediaOpened" />
+                          VerticalAlignment="Top" Width="800" IsMuted="True" MediaOpened="WebmPlayer_MediaOpened"/>
             <Label x:Name="LbTitle" Content="" Grid.Row="0" Grid.Column="2" HorizontalAlignment="Right"
                    VerticalAlignment="Bottom" Height="38" Width="399" FontWeight="Bold" FontStyle="Italic"
                    FontSize="24" Margin="0,0,402,0" />
@@ -65,9 +65,7 @@
                     Background="#FF81C784" BorderThickness="1" TabIndex="-7" Focusable="False"
                     RenderTransformOrigin="0.5,0.5" Click="SelectBtn_Click" HorizontalAlignment="Left" Width="130"
                     FontSize="16" Visibility="Hidden" />
-            <Button x:Name="BtnRefresh" Content="Refresh" Grid.Column="2" HorizontalAlignment="Left" Margin="0,476,0,0"
-                    Grid.Row="2" BorderThickness="1" VerticalAlignment="Top" Click="BtnRefresh_Click" Width="130"
-                    FontSize="16" FontWeight="Bold" Height="35" />
+            
             <Label x:Name="LbInfos" Content="" Grid.Row="0" Grid.Column="2" HorizontalAlignment="Right"
                    VerticalAlignment="Bottom" Height="38" Width="399" FontWeight="Bold" FontStyle="Italic"
                    FontSize="24" />
