--- a/BackgroundChanger/Pages/MainWindow.xaml
+++ b/BackgroundChanger/Pages/MainWindow.xaml
@@ -7,7 +7,7 @@
                  xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
                  BorderThickness="0"
                  Title="CSGO - Background Changer"
-                 Height="641"
+                 Height="640"
                  Width="1200"
                  ResizeMode="NoResize"
                  WindowStartupLocation="CenterScreen"
@@ -58,20 +58,28 @@
                     </GridView>
                 </ListView.View>
             </ListView>
-            <MediaElement x:Name="WebmPlayer" Grid.Column="2" HorizontalAlignment="Left" Height="450" Grid.Row="2"
-                          VerticalAlignment="Top" Width="800" IsMuted="True" MediaOpened="WebmPlayer_MediaOpened" />
+            <Label Content="CS:GO MUST BE CLOSED" x:Name="LbAlertCsgo" HorizontalAlignment="Center" VerticalAlignment="Center"
+                   Grid.Row="0" Grid.ColumnSpan="4" Grid.Column="0" Height="44" Width="1200" Background="#FFF50057" FontWeight="Bold" Visibility="Hidden"
+                   FontSize="20" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Panel.ZIndex="1" Margin="0,0,-6,0" IsVisibleChanged="LbAlertCsgo_IsVisibleChanged"/>
+
             <Label x:Name="LbTitle" Content="" Grid.Row="0" Grid.Column="2" HorizontalAlignment="Right"
                    VerticalAlignment="Bottom" Height="38" Width="399" FontWeight="Bold" FontStyle="Italic"
-                   FontSize="24" Margin="0,0,402,0" />
+                   FontSize="24" Margin="0,0,402,0" Visibility="Hidden" />
+            <Label x:Name="LbInfos" Content="" Grid.Row="0" Grid.Column="2" HorizontalAlignment="Right"
+                   VerticalAlignment="Bottom" Height="38" Width="399" FontWeight="Bold" FontStyle="Italic"
+                   FontSize="24" Visibility="Hidden" />
+
+            <MediaElement x:Name="WebmPlayer" Grid.Column="2" HorizontalAlignment="Left" Height="450" Grid.Row="2" Visibility="Hidden"
+                          VerticalAlignment="Top" Width="800" IsMuted="True" MediaOpened="WebmPlayer_MediaOpened" />
+
+            <Button x:Name="InfoBtn" Content="File info" Grid.Column="2" Margin="0,476,0,45" Grid.Row="2"
+                    Background="#FF1976D2" BorderThickness="1" TabIndex="-7" Focusable="False"
+                    RenderTransformOrigin="0.5,0.5" Click="InfoBtn_Click" HorizontalAlignment="Left" Width="130"
+                    FontSize="16" Visibility="Hidden"/>
             <Button x:Name="SelectBtn" Content="Update" Grid.Column="2" Margin="670,476,0,45" Grid.Row="2"
                     Background="#FF81C784" BorderThickness="1" TabIndex="-7" Focusable="False"
                     RenderTransformOrigin="0.5,0.5" Click="SelectBtn_Click" HorizontalAlignment="Left" Width="130"
                     FontSize="16" Visibility="Hidden" />
-
-            <Label x:Name="LbInfos" Content="" Grid.Row="0" Grid.Column="2" HorizontalAlignment="Right"
-                   VerticalAlignment="Bottom" Height="38" Width="399" FontWeight="Bold" FontStyle="Italic"
-                   FontSize="24" />
         </Grid>
-
     </Grid>
 </mah:MetroWindow>
