--- a/BackgroundChanger/Pages/MainWindow.xaml
+++ b/BackgroundChanger/Pages/MainWindow.xaml
@@ -11,10 +11,10 @@
                  Width="1200"
                  ResizeMode="NoResize"
                  WindowStartupLocation="CenterScreen"
-                 Icon="../Resources/csgo.ico">
+                 Icon="../Resources/csgo.ico" WindowButtonCommandsOverlayBehavior="Never" RightWindowCommandsOverlayBehavior="Never" LeftWindowCommandsOverlayBehavior="Never">
     <controls:MetroWindow.RightWindowCommands>
         <controls:WindowCommands>
-            <Button x:Name="BtnUpdate" Content="Check for update" Click="BtnUpdate_Click" Visibility="Hidden"/>
+            <Button x:Name="BtnCheckUpdate" Content="Check for update" Click="BtnCheckUpdate_Click" Visibility="Hidden"/>
             <Button x:Name="BtnRefresh" Content="Refresh webm" Click="BtnRefresh_Click" />
             <Button x:Name="BtnChangeWebmFolder" Content="Change webm folder" Click="BtnChangeWebmFolder_Click" />
             <Button x:Name="BtnChangeCsgoFolder" Content="Change CS:GO folder" Click="BtnChangeCSGOFolder_Click" />
@@ -22,12 +22,12 @@
     </controls:MetroWindow.RightWindowCommands>
     <controls:MetroWindow.Flyouts>
         <controls:FlyoutsControl>
-            <controls:Flyout x:Name="UpdateFlyOut" Header="Update" Position="Right" Width="400">
+            <controls:Flyout x:Name="UpdateFlyOut" Header="Update" Position="Right" Width="400" AnimateOpacity="True">
                 <Grid>
-                    <Label x:Name="LbTitleUpdate" FontSize="14" FontWeight="Bold" VerticalAlignment="Top" />
-                    <Label x:Name="LbDescUpdate" FontSize="14" FontWeight="Bold" Margin="0,30,0,0" />
-                    <Button Width="130" FontSize="16" FontWeight="Bold" Height="35" HorizontalAlignment="Right"
-                            VerticalAlignment="Bottom" Margin="0,0,40,40" Content="Download" Background="#FF1976D2" />
+                    <Label x:Name="LbTitleUpdate" FontSize="24" FontWeight="Bold" VerticalAlignment="Top" Margin="10,0,0,0" />
+                    <TextBlock x:Name="LbDescUpdate" FontSize="14" FontWeight="Bold" Margin="25,50,0,0" MaxWidth="350" HorizontalAlignment="Left" TextWrapping="WrapWithOverflow"/>
+                    <Button x:Name="BtnUpdate" Width="130" FontSize="16" FontWeight="Bold" Height="35" HorizontalAlignment="Right"
+                            VerticalAlignment="Bottom" Margin="0,0,40,40" Content="Download" Background="#FF1976D2" Click="BtnUpdate_Click" />
                 </Grid>
             </controls:Flyout>
         </controls:FlyoutsControl>
